fix: resolve sonar issues, correct unsorted configs response
Signed-off-by: Michael Edgar <medgar@redhat.com>